@@ -30,6 +30,7 @@ Patches
  - John Hague
  - Dennis Luxen
  - Tom MacWright
+ - Andrii Mishkovskyi
  - Dražen Odobašić
  - Martijn van Oosterhout
  - Cameron Patrick
